@@ -1,0 +1,2 @@
+alice@sample.org: 5hhh1tz4s3kr1t
+bob@sample.org: 4n0th4s3kr1t
