@@ -1,6 +1,7 @@
 2009.01.06
 
 * Added initial admin directory and scripts.
+* Added code for mail server that dates to approximately July of 2006.
 
 2006.07
 
